Creating users components

--- a/EM/angular.json
+++ b/EM/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "EM"
+    }
+  },
+  "defaultProject": "EM",
+  "cli": {
+    "analytics": false
+  }
 }
